templates/02-security-group.yml
    EC2SecurityGroup:
        DeletionPolicy: "Delete"
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "alb SG"
            GroupName: !Sub "$to2-alb-SG"
            VpcId: !Ref EC2VPC
            Tags: 
              - 
                Key: "Name"
                Value: !Sub "$to2-alb-SG"
            
            SecurityGroupIngress: 
              - 
                CidrIp: "0.0.0.0/0"
                FromPort: 80
                IpProtocol: "tcp"
                ToPort: 80
              - 
                CidrIp: "0.0.0.0/0"
                FromPort: 443
                IpProtocol: "tcp"
                ToPort: 443
            
            SecurityGroupEgress: 
              - 
                CidrIp: "0.0.0.0/0"
                IpProtocol: "-1"

    EC2SecurityGroup2:
        DeletionPolicy: "Delete"
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "ECS container SG"
            GroupName: !Sub "to2-ecs-SG"
            VpcId: !Ref EC2VPC
            Tags: 
              - 
                Key: "Name"
                Value: !Sub "$to2-ecs-SG"
            
            SecurityGroupIngress: 
              - 
                SourceSecurityGroupId: !Ref EC2SecurityGroup4
                SourceSecurityGroupOwnerId: "416536687282"
                Description: "vpc"
                FromPort: 80
                IpProtocol: "tcp"
                ToPort: 80
              - 
                SourceSecurityGroupId: "sg-060cd048907161936"
                SourceSecurityGroupOwnerId: "416536687282"
                Description: "self allow"
                FromPort: 80
                IpProtocol: "tcp"
                ToPort: 80
              - 
                SourceSecurityGroupId: !Ref EC2SecurityGroup
                SourceSecurityGroupOwnerId: "416536687282"
                Description: "alb"
                FromPort: 8080
                IpProtocol: "tcp"
                ToPort: 8080
              - 
                SourceSecurityGroupId: !Ref EC2SecurityGroup4
                SourceSecurityGroupOwnerId: "416536687282"
                Description: "vpc"
                FromPort: 443
                IpProtocol: "tcp"
                ToPort: 443
              - 
                SourceSecurityGroupId: "sg-060cd048907161936"
                SourceSecurityGroupOwnerId: "416536687282"
                Description: "self allow"
                FromPort: 443
                IpProtocol: "tcp"
                ToPort: 443
            
            SecurityGroupEgress: 
              - 
                CidrIp: "0.0.0.0/0"
                IpProtocol: "-1"
              - 
                DestinationPrefixListId: "pl-78a54011"
                IpProtocol: "-1"

    EC2SecurityGroup3:
        DeletionPolicy: "Delete"
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "mq-message-broker"
            GroupName: !Sub "$to2-broker-SG"
            VpcId: !Ref EC2VPC
            Tags: 
              - 
                Key: "Name"
                Value: !Sub "$to2-mqbroker-SG"
            
            SecurityGroupIngress: 
              - 
                SourceSecurityGroupId: !Ref EC2SecurityGroup2
                SourceSecurityGroupOwnerId: "416536687282"
                Description: "allow OpenWire from ecs fargate"
                FromPort: 61617
                IpProtocol: "tcp"
                ToPort: 61617
              - 
                SourceSecurityGroupId: !Ref EC2SecurityGroup2
                SourceSecurityGroupOwnerId: "416536687282"
                Description: "allow stomp from ecs fargate"
                FromPort: 61614
                IpProtocol: "tcp"
                ToPort: 61614
              - 
                SourceSecurityGroupId: !Ref EC2SecurityGroup2
                SourceSecurityGroupOwnerId: "416536687282"
                Description: "allow amqps, amqp from ecs fargate"
                FromPort: 5671
                IpProtocol: "tcp"
                ToPort: 5672
            
            SecurityGroupEgress: 
              - 
                CidrIp: "0.0.0.0/0"
                Description: "all traffic allowed"
                FromPort: 0
                IpProtocol: "tcp"
                ToPort: 65535

    EC2SecurityGroup4:
        DeletionPolicy: "Delete"
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "default VPC security group"
            GroupName: "default"
            VpcId: !Ref EC2VPC
            Tags: 
              - 
                Key: "Name"
                Value: !Sub "$to2-vpc-SG"
            
            SecurityGroupIngress: 
              - 
                SourceSecurityGroupId: "sg-04ab50d4acbfc886b"
                SourceSecurityGroupOwnerId: "416536687282"
                IpProtocol: "-1"
              - 
                CidrIp: "0.0.0.0/0"
                Description: "allow https request"
                FromPort: 443
                IpProtocol: "tcp"
                ToPort: 443
            
            SecurityGroupEgress: 
              - 
                CidrIp: "0.0.0.0/0"
                IpProtocol: "-1"
